@@ -113,7 +113,7 @@ and how they are used.
     000A      <a href="#1442">1442</a>    adrdmprs.rdr
     000C      <a href="#3505">3505</a>    jcl.txt     ascii  trunc
     000D      <a href="#3525">3525</a>    pch00d.txt  ascii
-    000E      <a href="#1403">1403</a>    prt00e.txt
+    000E      <a href="#1403">1403</a>    prt00e.txt  notrunc
 
     001F      <a href="#3270">3270</a>    * 192.168.0.1
     0200.4    <a href="#3270">3270</a>    * 192.168.0.0  255.255.255.0
@@ -2072,6 +2072,15 @@ and how they are used.
         line-feeds only are written at the end of each line.
         <p>
 
+    <dt><code>notrunc</code>
+    <dd><p>
+        specifies that the output file will not be truncated to zero
+        bytes when it is opened. 
+        If the <code>notrunc</code> argument is not specified, then
+        any previous content of the file is destroyed when the file
+        is opened for output.
+        <p>
+
     </dl>
     <p>
 
@@ -2101,6 +2110,15 @@ and how they are used.
         sequences are written at the end of each line.
         If the <code>crlf</code> argument is not specified, then
         line-feeds only are written at the end of each line.
+        <p>
+
+    <dt><code>notrunc</code>
+    <dd><p>
+        specifies that the output file will not be truncated to zero
+        bytes when it is opened. 
+        If the <code>notrunc</code> argument is not specified, then
+        any previous content of the file is destroyed when the file
+        is opened for output.
         <p>
 
     </dl>
